<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/purple_700"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="openCamera"
                    android:text="Click and take profile photo"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="50dp"
                    android:onClick="openCamera"
                    android:visibility="gone"
                    tools:srcCompat="@tools:sample/avatars" />


            </LinearLayout>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_date"
                android:textColor="@color/purple_700"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/pick_date"
                android:onClick="showDatePicker" />

            <TextView
                android:id="@+id/tv_blood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blood_group"
                android:textColor="@color/purple_700"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_bloodGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_blood_group" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/purple_700"
                android:text="@string/location" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:visibility="gone"
                android:textColor="@color/purple_700"
                android:text="@string/location" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="getLocation"
                android:text="@string/get_location"
                />




            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="@color/purple_700"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_address" />

            <TextView
                android:id="@+id/tv_qualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_your_qualification"
                android:textColor="@color/purple_700"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Gender"
                android:textColor="@color/purple_700"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textSize="20sp" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="makeSound"
                android:text="@string/terms_and_agreements"
                android:textSize="18sp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="20sp"
                android:textStyle="normal|bold" />
        </TableLayout>
    </ScrollView>
</LinearLayout>